# gce

./: Makefile  README.MD  pyproject.toml  requirements.txt
docs/: STACK_ROLE.md
examples/: constructive.json  destructive.json  independent.json  sample_run_bundle.json
src/gce/: __init__.py  ai_explainer.py  cli.py
src/gce/core/cc_surface/: __init__.py  api.py  composition.py  metrics.py  recommend.py  validators.py
src/gce/exporters/: __init__.py  one_pager.py
src/gce/ui/: app.py  gradio_app.py
tests/: __init__.py  test_cc_surface_contract.py  test_export_minimal.py  test_metrics_edge_cases.py  test_youden.py  utils.py
