[project]
name = "gce"
version = "0.1.0"
description = "Guardrail Composability Explorer (Gradio)"
requires-python = ">=3.10"
dependencies = [
  "gradio>=4.44.0",
  "pydantic>=2.7",
  "jinja2>=3.1",
  "weasyprint>=62.0",   # or "reportlab>=4.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
